--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,13 @@
 body {
   background-color: black;
 }
-
+.container {
+  display: grid;
+  float: left;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
 header,
 nav,
 .main,
@@ -18,41 +24,58 @@ footer {
 }
 header {
   background: #434343;
-  width: 100%;
+  width: calc(100% - 4%);
   height: 5rem;
   grid-template-columns: 33.3% 33.3% 33.3%;
   grid-template-rows: 50% 50%;
   margin: 0%;
+  padding-left: 2%;
+  padding-right: 2%;
+  float: left;
+  position: relative;
+  overflow: hidden;
 }
-svg {
+
+.svgg {
   width: 100%;
   height: 5rem;
+  display: grid;
+  justify-content: start;
+  align-content: center;
+}
+svg {
+  width: 6rem;
+  height: 4rem;
 }
 rect {
+  width: 100%;
+  height: 20%;
 }
 div.logoo {
   width: 100%;
   height: 5rem;
-  align-content: flex-start;
-  align-self: flex-start;
+  margin: auto;
+  display: grid;
+  justify-content: center;
+  align-content: center;
 }
 .logo {
-  width: 66.6%;
-  height: 4rem;
+  width: 22rem;
+  height: 5rem;
 }
 
 .userr {
   width: 100%;
   height: 5rem;
-  justify-items: center;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  justify-content: end;
   align-content: center;
 }
 .user {
-  width: 20%;
+  width: 100%;
   height: 4rem;
 }
+
 nav {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
