--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body {
   color: white;
 }
 
-
 a {
   color:rgb(133, 185, 252)
 }
@@ -75,9 +74,18 @@ button:active {
 
 .grid-container {
   display: grid;
-  grid-template-columns: 40% 40%;
-  
+  grid-template-columns: repeat(5, 1fr); 
+  gap: 10px;
+  text-align: center;
 }
+
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Alinea el contenido al centro horizontalmente */
+  text-align: center; /* Alinea el texto al centro */
+}
+
 
 .item {
   display: flex;
@@ -102,18 +110,19 @@ img {
   padding: 5px;
 }
 
+.image {
+  height: 150px ;
+}
 .container-login {
   text-align: center;
 }
 
-.user {
-  margin: 30px;
-}
+
 
 .separator2 {
   background-color: grey;
   height: 1px;
-  width: 250%;
+  
   
 }
 
@@ -121,4 +130,13 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.form input {
+  text-align: center;
+  border-radius: 10px;
+  height: 10px;
+  padding: 15px;
+  margin: 15px;
+  
 }
