--- a/css/style.css
+++ b/css/style.css
@@ -84,29 +84,12 @@ a {
   
 }
 
-
-
-
-
-
-
-/*button {
+button {
   border: 0;
   background-image: linear-gradient(150deg, #008000, #2cb32c, #004100);
   display: flex;
-  border-radius: 30px;
-  padding: 3px;
-  margin: 30px;
   color: white;
   cursor: pointer;
-  transition: 0.3s;
-}
-
-button span {
-  font-size:x-large;
-  background-color: #2cb32c;
-  padding: 15px 50px;
-  border-radius: 30px;
   transition: 0.3s;
 }
 
@@ -117,7 +100,7 @@ button:hover span {
 button:active {
   transform: scale(1);
 }
-*/
+
 .grid-container {
   display: grid;
   grid-template-columns: repeat(5, 1fr); 
@@ -156,9 +139,20 @@ img {
   padding: 5px;
 }
 
+.image-container2 {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+}
+
+.image:first-child {
+  margin-right: auto;
+}
+
 .image {
   height: 150px ;
 }
+
 .container-login {
   text-align: center;
   font-size:22px;
