--- a/css/style_4inline.css
+++ b/css/style_4inline.css
@@ -100,6 +100,7 @@ u {
   justify-content: center;
   align-items: center;
   margin: 50px;
+  font-family: "Baloo Chettan-Regular", Helvetica;
 }
 
 .publish {
@@ -126,13 +127,15 @@ u {
 .info {
   display: flex;
 }
+
 .reading {
   display: flex;
   background-color: #005577;
   width: 1100px;
-  height: 220px;
+  height: 250px;
   padding: 20px;
 }
+
 .comments {
   background-color: #FFFFFF;
   flex-grow: 1;
@@ -140,13 +143,30 @@ u {
   width: 1000px;
 }
 
-.recommendation {
-  display: flex;
-  align-items: center;
+.text2 {
+  color: black;
 }
-
 
 .btn-publish {
   margin-left: auto;
+}
+
+.info-row {
+  display: flex;
+}
+
+.recommended {
+  display: flex;
+  margin-left: 300px;
+}
+
+.thumbs-down , .thumbs-up{
+  width: 50px;
+  height: 50px;
+  margin-right: 15px;
+}
+
+.time-published{
+  text-align: center;
   
 }
