--- a/css/style_4inline.css
+++ b/css/style_4inline.css
@@ -106,9 +106,9 @@ u {
 .publish {
   display: flex;
   flex-direction: column;
-  width: 1100px;
+  width: 1000px;
   border: 1px solid #000;
-  background-color: #005577;
+  background-color: #003950;
   padding: 20px;
 }
 
@@ -130,8 +130,8 @@ u {
 
 .reading {
   display: flex;
-  background-color: #005577;
-  width: 1100px;
+  background-color: #003950;
+  width: 1000px;
   height: 250px;
   padding: 20px;
 }
@@ -140,7 +140,8 @@ u {
   background-color: #FFFFFF;
   flex-grow: 1;
   height: 100px;
-  width: 1000px;
+  width: 900px;
+  
 }
 
 .text2 {
@@ -149,6 +150,8 @@ u {
 
 .btn-publish {
   margin-left: auto;
+  background-color: #FF6666;
+  
 }
 
 .info-row {
@@ -157,7 +160,7 @@ u {
 
 .recommended {
   display: flex;
-  margin-left: 300px;
+  margin-left: 210px;
 }
 
 .thumbs-down , .thumbs-up{
@@ -169,4 +172,16 @@ u {
 .time-published{
   text-align: center;
   
+}
+
+.question {
+  text-align: center;
+}
+
+.question2 {
+  margin-left: 95px;
+}
+
+.position {
+  margin-left: 110px;
 }
