--- a/css/index.css
+++ b/css/index.css
@@ -107,7 +107,7 @@ p {
   font-size: 1.5rem;
   width: 90%;
 }
-.biblioteca {
+*/ .biblioteca {
   display: grid;
   grid-template-columns: 25rem 25rem 25rem;
   grid-template-rows: 1fr;
