--- a/css/prueba.css
+++ b/css/prueba.css
@@ -45,7 +45,7 @@ header {
   height: 4rem;
 }
 rect {
-  width: 100%;
+  width: 50%;
   height: 20%;
 }
 .logoo {
@@ -81,20 +81,77 @@ rect {
 }
 /*------------------------------------------------------------
               NAV                                   */
-nav {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 10.5% 89.5%;
-  width: 100%;
-  height: 46vh;
-  margin-top: 2rem;
-  justify-items: center;
-  align-items: end;
-}
-nav p {
-  width: 90%;
-  font-size: 1.5rem;
-}
+              .abrir-menu,
+              .cerrar-menu {
+                  display: block;
+                  border: 0;
+                  font-size: 1.25rem;
+                  background-color: transparent;
+                  cursor: pointer;
+              }
+          
+              .abrir-menu {
+                  color: #1c1c1c;
+              }
+          
+              .cerrar-menu {
+                  color: #ececec;
+              }
+          
+              .nav {
+                  opacity: 0;
+                  visibility: hidden;
+                  display: flex;
+                  flex-direction: column;
+                  align-items: end;
+                  gap: 2rem;
+                  position: absolute;
+                  top: 80px;
+                  left: 0;
+                  bottom: 400px;
+                  background-color: #001427;
+                  box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5);
+                  border: 1px solid white;
+                  margin-left: 1px;
+              }
+          
+              .nav.visible {
+                  opacity: 1;
+                  visibility: visible;
+              }
+              
+              .nav-list {
+                  flex-direction: column;
+                  align-items: end;
+                  font-family: "Baloo Chettan 2", cursive;
+                  font-size: 1.5rem;
+              }
+          
+              li{
+                  color: #ecececec;
+                  margin-bottom: 50px;
+              }
+          
+              ul {
+                  list-style: none;
+              }
+              
+              .hamgurguesa {
+                  width: 80px;
+                  height: 80px;
+              }
+          
+              .item-1, .item-2, .item-3, .item-4, .item-5{
+                  display: flex;
+                  margin-right: 20px;
+              }
+          
+              .svg-1 , .svg-2 , .svg-3 , .svg-4 , .svg-5 {
+                  height: 34px;
+                  width: 34px;
+                  margin-right: 10px;
+                  
+              }
 
 .biblioteca {
   display: grid;
@@ -105,7 +162,7 @@ nav p {
   background-color: #0080d5;
   border-radius: 15px;
 }
-nav .cardJuegoBibloteca {
+ .cardJuegoBibloteca {
   display: grid;
   align-items: center;
   align-content: center;
