--- a/css/prueba.css
+++ b/css/prueba.css
@@ -35,10 +35,12 @@ header {
   width: 100%;
 }
 .menuHamburgesa {
-  width: 100%;
+  height: 80px;
+  margin-right: 450px;
   display: grid;
   justify-content: start;
   align-content: center;
+
 }
 .hamburgesa {
   width: 6rem;
@@ -106,9 +108,10 @@ rect {
                   align-items: end;
                   gap: 2rem;
                   position: absolute;
-                  top: 80px;
+                  z-index: 1;
+                  top: 77px;
                   left: 0;
-                  bottom: 400px;
+                  bottom: 390px;
                   background-color: #001427;
                   box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5);
                   border: 1px solid white;
@@ -138,7 +141,7 @@ rect {
               
               .hamgurguesa {
                   width: 80px;
-                  height: 80px;
+                  height: 85px;
               }
           
               .item-1, .item-2, .item-3, .item-4, .item-5{
@@ -147,11 +150,78 @@ rect {
               }
           
               .svg-1 , .svg-2 , .svg-3 , .svg-4 , .svg-5 {
-                  height: 34px;
-                  width: 34px;
+                  height: 40px;
+                  width: 40px;
                   margin-right: 10px;
                   
               }
+
+
+
+/*---------------------- PERFIL*/
+
+.abrir-perfil,
+.cerrar-perfil {
+    display: block;
+    border: 0;
+    font-size: 1.25rem;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.abrir-perfil {
+    color: #1c1c1c;
+}
+
+.cerrar-perfil {
+    color: #ececec;
+}
+
+.nav-2 {
+    opacity: 0;
+    visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 2rem;
+    position: absolute;
+    z-index: 1;
+    top: 77px;
+    right: 1px;
+    bottom: 325px;
+    background-color: #001427;
+    box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5);
+    border: 1px solid white;
+    margin-left: 1px;
+}
+
+.nav-2.visible {
+    opacity: 1;
+    visibility: visible;
+}
+
+.name-user li {
+  margin: 0;
+  
+}
+
+
+
+.separator {
+  background-color: grey;
+  height: 1px;
+  margin-bottom: 10px;
+}
+
+.image-user {
+  height: 50px;
+  width: 50px;
+}
+
+
+
+
+
 
 .biblioteca {
   display: grid;
@@ -212,6 +282,7 @@ rect {
   width: 90%;
   padding: 20px 20px;
   overflow: hidden;
+  z-index: 0;
 }
 
 .main .swiper-main {
