--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,11 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   color: white;
-  font-family: 'Baloo Chettan 2', cursive;
+  font-family: "Baloo Chettan 2", cursive;
 }
 
-
-
 a {
-  color:rgb(133, 185, 252)
+  color: rgb(133, 185, 252);
 }
 
 .center-logo {
@@ -44,7 +42,6 @@ a {
 .form input {
   width: 400px;
   height: 30px;
-  
 }
 
 .loginButton {
@@ -62,9 +59,9 @@ a {
 }
 
 .image-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .image-2 {
@@ -75,7 +72,6 @@ a {
 .image-3 {
   height: 65px;
 }
-
 
 .captcha {
   height: 90px;
@@ -100,18 +96,16 @@ a {
   border: 3px solid transparent;
   border-top-color: white;
   animation: animationButton 1s ease infinite;
-
 }
 
 @keyframes animationButton {
-  0%{
+  0% {
     transform: rotate(0turn);
   }
 
   100% {
     transform: rotate(1turn);
   }
-  
 }
 
 button {
@@ -133,7 +127,7 @@ button:active {
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(5, 1fr); 
+  grid-template-columns: repeat(5, 1fr);
   gap: 10px;
   text-align: center;
 }
@@ -144,7 +138,6 @@ button:active {
   align-items: center;
   text-align: center;
 }
-
 
 .item {
   display: flex;
