ahi se mejoro un poco

--- a/css/prueba.css
+++ b/css/prueba.css
@@ -6,7 +6,6 @@
   outline: none;
   box-sizing: border-box;
 }
-
 body {
   background-color: #012;
   font-family: "Baloo Chettan 2", cursive;
@@ -35,19 +34,17 @@ header {
   width: 100%;
 }
 .menuHamburgesa {
-  height: 80px;
-  margin-right: 450px;
+  width: 100%;
   display: grid;
   justify-content: start;
   align-content: center;
-
 }
 .hamburgesa {
   width: 6rem;
   height: 4rem;
 }
 rect {
-  width: 50%;
+  width: 100%;
   height: 20%;
 }
 .logoo {
@@ -83,145 +80,20 @@ rect {
 }
 /*------------------------------------------------------------
               NAV                                   */
-              .abrir-menu,
-              .cerrar-menu {
-                  display: block;
-                  border: 0;
-                  font-size: 1.25rem;
-                  background-color: transparent;
-                  cursor: pointer;
-              }
-          
-              .abrir-menu {
-                  color: #1c1c1c;
-              }
-          
-              .cerrar-menu {
-                  color: #ececec;
-              }
-          
-              .nav {
-                  opacity: 0;
-                  visibility: hidden;
-                  display: flex;
-                  flex-direction: column;
-                  align-items: end;
-                  gap: 2rem;
-                  position: absolute;
-                  z-index: 1;
-                  top: 77px;
-                  left: 0;
-                  bottom: 390px;
-                  background-color: #001427;
-                  box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5);
-                  border: 1px solid white;
-                  margin-left: 1px;
-              }
-          
-              .nav.visible {
-                  opacity: 1;
-                  visibility: visible;
-              }
-              
-              .nav-list {
-                  flex-direction: column;
-                  align-items: end;
-                  font-family: "Baloo Chettan 2", cursive;
-                  font-size: 1.5rem;
-              }
-          
-              li{
-                  color: #ecececec;
-                  margin-bottom: 50px;
-              }
-          
-              ul {
-                  list-style: none;
-              }
-              
-              .hamgurguesa {
-                  width: 80px;
-                  height: 85px;
-              }
-          
-              .item-1, .item-2, .item-3, .item-4, .item-5{
-                  display: flex;
-                  margin-right: 20px;
-              }
-          
-              .svg-1 , .svg-2 , .svg-3 , .svg-4 , .svg-5 {
-                  height: 40px;
-                  width: 40px;
-                  margin-right: 10px;
-                  
-              }
-
-
-
-/*---------------------- PERFIL*/
-
-.abrir-perfil,
-.cerrar-perfil {
-    display: block;
-    border: 0;
-    font-size: 1.25rem;
-    background-color: transparent;
-    cursor: pointer;
+nav {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 10.5% 89.5%;
+  width: 100%;
+  height: 46vh;
+  margin-top: 2rem;
+  justify-items: center;
+  align-items: end;
 }
-
-.abrir-perfil {
-    color: #1c1c1c;
+nav p {
+  width: 90%;
+  font-size: 1.5rem;
 }
-
-.cerrar-perfil {
-    color: #ececec;
-}
-
-.nav-2 {
-    opacity: 0;
-    visibility: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    gap: 2rem;
-    position: absolute;
-    z-index: 1;
-    top: 77px;
-    right: 1px;
-    bottom: 325px;
-    background-color: #001427;
-    box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5);
-    border: 1px solid white;
-    margin-left: 1px;
-}
-
-.nav-2.visible {
-    opacity: 1;
-    visibility: visible;
-}
-
-.name-user li {
-  margin: 0;
-  
-}
-
-
-
-.separator {
-  background-color: grey;
-  height: 1px;
-  margin-bottom: 10px;
-}
-
-.image-user {
-  height: 50px;
-  width: 50px;
-}
-
-
-
-
-
 
 .biblioteca {
   display: grid;
@@ -232,7 +104,7 @@ rect {
   background-color: #0080d5;
   border-radius: 15px;
 }
- .cardJuegoBibloteca {
+nav .cardJuegoBibloteca {
   display: grid;
   align-items: center;
   align-content: center;
