--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ a {
 
 .center-logo {
   text-align: center;
+  margin-left: 100px;
 }
 
 .separator-container {
@@ -44,7 +45,7 @@ a {
   height: 30px;
 }
 
-.loginButton {
+.loginButton , .registerButton {
   font-size: 20px;
   color: #fff;
   background-color: #29ca8e;
@@ -110,20 +111,51 @@ a {
 
 button {
   border: 0;
-  background-image: linear-gradient(150deg, #008000, #2cb32c, #004100);
+  background-image: linear-gradient(
+      150deg,
+      #004400,
+      #116611,
+      #55AA55
+  );
   display: flex;
+  border-radius: 10px;
+  font-size: 20px;
+  padding: 3px;
   color: white;
   cursor: pointer;
-  transition: 0.3s;
+  transition: .3s;
+}
+
+button span {
+  
+  padding: 10px 30px;
+  border-radius: 8px;
+  transition: .3s;
+  
+
 }
 
 button:hover span {
   background: none;
+  transform:scale(1.2) ;
 }
 
 button:active {
   transform: scale(1);
+
 }
+
+
+            
+button:hover {
+  background-image: linear-gradient(
+      100deg,
+      #116611,
+      #004400
+  );
+  
+}
+
 
 .grid-container {
   display: grid;
@@ -204,4 +236,25 @@ u {
 
 .image {
   height: 150px;
+}
+
+
+
+
+.cuenta-creada {
+  animation: bounce 0.7s;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+
+  
 }
